[tool.poetry]
name = "twint-gyazo"
version = "0.1.0"
description = ""
authors = ["yuiseki <yuiseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.9.3"
twint = {git = "https://github.com/twintproject/twint.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
