[tool.poetry]
name = "twint-gyazo"
version = "0.1.0"
description = ""
authors = ["yuiseki <yuiseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
twint = {git = "https://github.com/twintproject/twint.git", rev = "e7c8a0c764f6879188e5c21e25fb6f1f856a7221"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
